assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&family=Tillana:wght@500;700&display=swap');

/* generic */

* {
    font-family: Tillana, sans-serif;
    margin: 0;
    padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Skranji, Tillana, sans-serif;
    font-weight: 400;
    color: #37371F;
}

.right-align {
    text-align: right;
}

.main-content,
.walks-section,
footer,
header {
    max-width: 1650px;
    margin: 0 auto;
}

body {
    background-color: #D4CB92;
}

/* header title & navigation links */

header {
    display: flex;
    flex-wrap: wrap;
    background-color: #37371F;
    width: 100%;
    justify-content: flex-start;
}

/* navigation links */

nav {
    display: flex;
    padding: 0.5rem 0;
    justify-content: flex-start;
    /* width: 35%; */
    align-items: center;
}

nav a {
    border: 2px solid #F4FFF8;
    border-radius: 8px;
    padding: 0.5rem 2rem;
    margin: 0 1rem;
    text-decoration: none;
    background-color: #37371F;
    color: #F4FFF8;
    font-weight: 700;
    font-size: 20px;
    font-family: Skranji, Tillana, sans-serif;
}

nav a:hover,
.active {
    color: #37371F;
    background-color: #F4FFF8;
}

/* title */

nav~div {
    display: flex;
    flex-wrap: wrap;
    padding: 0.5rem 0;
    width: 65%;
    justify-content: center;
    align-items: center;
    position: relative;
}

h1 {
    color: #F4FFF8;
    font-size: 60px;
    margin-top: 1rem;
    position: absolute;
}

header img {
    height: 60px;
    margin-right: 33rem;
}

/* hero image */

#hero-image-box {
    height: 500px;
    width: 100%;
    overflow: hidden;
}

/* Image by <a href="https://pixabay.com/users/timhill-5727184/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2443093">Tim Hill</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2443093">Pixabay</a> */

#hero-image {
    height: inherit;
    background-image: url(../images/hero-image.jpg);
    background-position: left bottom;
    background-size: auto;
    background-repeat: no-repeat;
    animation-name: hero-diagonal-move;
    animation-duration: 30s;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
}

/* hero image animation - Slow image pan from left to right */

@keyframes hero-diagonal-move {
    0% {
        background-position: left bottom;
    }

    100% {
        background-position: right center;
    }
}

/* welcome section */

#welcome-section {
    background-color: #37371F;
    color: #F4FFF8;
    display: flex;
    flex-wrap: wrap;
    padding-top: 2rem;
}

#welcome-section h3 {
    color: #F4FFF8;
}

.welcome-section-heading {
    color: #F4FFF8;
    font-size: 30px;
}

/* welcome section text */

#welcome-section-text-one {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: space-between;
    margin: 1rem;
}

#welcome-section-text-one h2,
#welcome-section-text-two h2 {
    margin-left: 2rem;
}

#welcome-section-text-one p,
#welcome-section-text-two p {
    margin: 0.5rem 0 1rem 2rem;
    border-top: 3px solid #F4FFF8;
    padding-top: 0.5rem;
    font-size: 20px;
}

#welcome-section-text-two {
    display: flex;
    width: 100%;
    padding-bottom: 5rem;
    align-items: center;
    gap: 1rem;
}

#welcome-section-text-extend {
    flex: 6;
}

#welcome-section-text-challenge {
    flex: 4;
}

#welcome-section-text-challenge h2 {
    text-align: center;
    margin-left: 0;
}

#welcome-section-text-challenge p {
    margin-right: 2rem;
    text-align: center;
}

/* welcome section images */

#welcome-section-images {
    display: flex;
    flex: 1;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    margin: 1rem;
}

#welcome-section-images h2 {
    text-align: center;
    text-decoration: underline;
}

#welcome-image-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.5rem;
}

#welcome-image-box div {
    margin: 0.5rem;
}

#welcome-image-box div {
    margin: 1.5rem;
}

#welcome-image-box h3 {
    color: #F4FFF8;
    margin-bottom: 0.3rem;
    text-align: center;
}

.img-wrap {
    height: 200px;
    width: 200px;
}

#welcome-image-box img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border: 5px solid #F4FFF8;
}

/* accommodation section */

#accommodation-section {
    display: flex;
    flex-wrap: wrap;
}

#accommodation-section h2 {
    width: 100%;
    font-size: 30px;
    text-align: center;
    background-color: #F4FFF8;
    padding: 1rem 0;
    border-bottom: 5px solid #37371F;
}

#accommodation-section img {
    height: 100px;
}

#accommodation-section ul {
    padding-left: 2rem;
    list-style-type: circle;
}

#accommodation-section summary~p {
    padding-left: 2rem;
}

.accommodation-box-outer {
    flex: 1 0 48%;
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    align-items: center;
}

.accommodation-box {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    background-color: rgba(244, 255, 248, 0.7);
    border: 5px solid #37371F;
    border-radius: 5px;
    margin: 3rem;
    padding: 2rem;
}

.accommodation-box:hover {
    background-color: rgba(244, 255, 248, 1);
}

.accommodation-box-title {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.accommodation-box h3 {
    font-size: 30px;
}

.accommodation-box p,
.accommodation-box summary,
.accommodation-box li {
    font-size: 20px;
}

.accommodation-box img {
    flex: 2;
}

.accommodation-box p {
    flex: 8;
}

.accommodation-box p~div {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    color: #37371F;
}

.accommodation-box details {
    cursor: pointer;
}

.accommodation-box details~details {
    border-top: 2px solid #37371F;
}
/* ... */

